--- a/hoxton_media.html
+++ b/hoxton_media.html
@@ -113,7 +113,7 @@
             <p>Just sing up, describe your content, and our smart machine learning service wwill generate the content
                 and deliver it to every social media platform.
                 </p>
-            <p>Subscribe now, get your first month free and savings of up to 50%!</p>
+            <p>Subscribe now, get your first month free and savings of up to <b>50%!</b></p>
             
             <button class="subscribe-button" type="button">
                 Subscribe Now
